# cuttle-patterns

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: lint.yml  tests.yml
cuttle_patterns/: config.py  ingest.py
cuttle_patterns/cli/: __init__.py  cmd_ingest.py  cmd_inscribe.py  cmd_overlay.py  cmd_setup.py  main.py
cuttle_patterns/preprocessing/: align.py  inscribe.py  overlay.py  pose.py
docs/: DECISIONS.md  PHASES.md
tests/: conftest.py  test_config.py  test_ingest.py
tests/cli/: test_cmd_ingest.py  test_cmd_inscribe.py  test_cmd_overlay.py  test_cmd_setup.py  test_main.py
tests/preprocessing/: conftest.py  test_align.py  test_inscribe.py  test_overlay.py  test_pose.py
